Reworked DEG meta analysis.

--- a/meta_analysis/analysis_res_meta_v2.ipynb
+++ b/meta_analysis/analysis_res_meta_v2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "split-louisiana",
+   "id": "indie-copying",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "burning-flood",
+   "id": "representative-petroleum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +47,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "relevant-arcade",
+   "id": "dental-geography",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "broad-jerusalem",
+   "execution_count": 4,
+   "id": "absolute-virtue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retained-procedure",
+   "id": "czech-discipline",
    "metadata": {},
    "source": [
     "# Functions"
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "allied-benchmark",
+   "execution_count": 5,
+   "id": "removed-compromise",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blank-amino",
+   "id": "competent-blood",
    "metadata": {},
    "source": [
     "# Data"
@@ -143,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "molecular-conversion",
+   "execution_count": 6,
+   "id": "heavy-lender",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protective-blink",
+   "id": "random-elephant",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-singer",
+   "id": "elegant-physiology",
    "metadata": {},
    "source": [
     "## DEG"
@@ -203,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "speaking-serve",
+   "execution_count": 7,
+   "id": "mathematical-separate",
    "metadata": {},
    "outputs": [
     {
@@ -212,47 +212,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>7652</dd>\n",
+       "\t\t<dd>8229</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.378025886770082</dd>\n",
+       "\t\t<dd>0.406530975200079</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>3966</dd>\n",
+       "\t\t<dd>4862</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>3686</dd>\n",
+       "\t\t<dd>3367</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 7652\n",
-       "\\item[\\$deg\\_prop] 0.378025886770082\n",
-       "\\item[\\$n\\_up] 3966\n",
-       "\\item[\\$n\\_down] 3686\n",
+       "\\item[\\$n\\_deg] 8229\n",
+       "\\item[\\$deg\\_prop] 0.406530975200079\n",
+       "\\item[\\$n\\_up] 4862\n",
+       "\\item[\\$n\\_down] 3367\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   7652\n",
+       ":   8229\n",
        "$deg_prop\n",
-       ":   0.378025886770082\n",
+       ":   0.406530975200079\n",
        "$n_up\n",
-       ":   3966\n",
+       ":   4862\n",
        "$n_down\n",
-       ":   3686\n",
+       ":   3367\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 7652\n",
+       "[1] 8229\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.3780259\n",
+       "[1] 0.406531\n",
        "\n",
        "$n_up\n",
-       "[1] 3966\n",
+       "[1] 4862\n",
        "\n",
        "$n_down\n",
-       "[1] 3686\n"
+       "[1] 3367\n"
       ]
      },
      "metadata": {},
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inner-feature",
+   "id": "double-camcorder",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "intellectual-draft",
+   "execution_count": 8,
+   "id": "julian-width",
    "metadata": {},
    "outputs": [
     {
@@ -282,47 +282,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>593</dd>\n",
+       "\t\t<dd>618</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.588293650793651</dd>\n",
+       "\t\t<dd>0.613095238095238</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>262</dd>\n",
+       "\t\t<dd>317</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>331</dd>\n",
+       "\t\t<dd>301</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 593\n",
-       "\\item[\\$deg\\_prop] 0.588293650793651\n",
-       "\\item[\\$n\\_up] 262\n",
-       "\\item[\\$n\\_down] 331\n",
+       "\\item[\\$n\\_deg] 618\n",
+       "\\item[\\$deg\\_prop] 0.613095238095238\n",
+       "\\item[\\$n\\_up] 317\n",
+       "\\item[\\$n\\_down] 301\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   593\n",
+       ":   618\n",
        "$deg_prop\n",
-       ":   0.588293650793651\n",
+       ":   0.613095238095238\n",
        "$n_up\n",
-       ":   262\n",
+       ":   317\n",
        "$n_down\n",
-       ":   331\n",
+       ":   301\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 593\n",
+       "[1] 618\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.5882937\n",
+       "[1] 0.6130952\n",
        "\n",
        "$n_up\n",
-       "[1] 262\n",
+       "[1] 317\n",
        "\n",
        "$n_down\n",
-       "[1] 331\n"
+       "[1] 301\n"
       ]
      },
      "metadata": {},
@@ -334,6 +334,22 @@
     "    dplyr::filter(geneID %in% matrisome_df$gene_symbol)\n",
     "deg_meta(m_deseq_results_df, lfc_thresh, q_deg_thresh, nrow(m_norm_counts_df))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "plain-reunion",
+   "metadata": {},
+   "source": [
+    "# Uni/multivariate analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alternate-atlas",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
