Updated how gene lists & meta analysis are conducted.

--- a/feature_selection_analysis/univ_survival.ipynb
+++ b/feature_selection_analysis/univ_survival.ipynb
@@ -3,8 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "prime-homework",
-   "metadata": {},
+   "id": "seventh-lafayette",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -73,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "polyphonic-paste",
+   "id": "following-yugoslavia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "express-pointer",
+   "id": "convenient-touch",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "electronic-factory",
+   "id": "functional-report",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "prospective-holly",
+   "id": "disciplinary-shower",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "architectural-entrepreneur",
+   "id": "cleared-series",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "civil-lingerie",
+   "id": "korean-kingdom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "contrary-proposition",
+   "id": "hourly-walter",
    "metadata": {},
    "outputs": [],
    "source": [
