Re-ran enrichment analyses.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hollywood-coordinator",
+   "id": "sapphire-society",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "integral-meditation",
+   "id": "blessed-lyric",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "thousand-policy",
+   "id": "afraid-shannon",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1\n",
+    "dset_idx <- 2\n",
     "save_lists <- TRUE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "living-liberty",
+   "id": "continuous-completion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-james",
+   "id": "declared-sheffield",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "round-hanging",
+   "id": "headed-summer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handmade-trinidad",
+   "id": "facial-forest",
    "metadata": {},
    "source": [
     "# Data"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "advisory-proceeding",
+   "id": "structural-trigger",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electric-truck",
+   "id": "alpine-detroit",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continent-genealogy",
+   "id": "miniature-vulnerability",
    "metadata": {},
    "source": [
     "## DEG"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "emerging-nursery",
+   "id": "handy-sterling",
    "metadata": {},
    "outputs": [
     {
@@ -292,47 +292,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>7652</dd>\n",
+       "\t\t<dd>7646</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.378025886770082</dd>\n",
+       "\t\t<dd>0.377729473372196</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>3966</dd>\n",
+       "\t\t<dd>4682</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>3686</dd>\n",
+       "\t\t<dd>2964</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 7652\n",
-       "\\item[\\$deg\\_prop] 0.378025886770082\n",
-       "\\item[\\$n\\_up] 3966\n",
-       "\\item[\\$n\\_down] 3686\n",
+       "\\item[\\$n\\_deg] 7646\n",
+       "\\item[\\$deg\\_prop] 0.377729473372196\n",
+       "\\item[\\$n\\_up] 4682\n",
+       "\\item[\\$n\\_down] 2964\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   7652\n",
+       ":   7646\n",
        "$deg_prop\n",
-       ":   0.378025886770082\n",
+       ":   0.377729473372196\n",
        "$n_up\n",
-       ":   3966\n",
+       ":   4682\n",
        "$n_down\n",
-       ":   3686\n",
+       ":   2964\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 7652\n",
+       "[1] 7646\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.3780259\n",
+       "[1] 0.3777295\n",
        "\n",
        "$n_up\n",
-       "[1] 3966\n",
+       "[1] 4682\n",
        "\n",
        "$n_down\n",
-       "[1] 3686\n"
+       "[1] 2964\n"
       ]
      },
      "metadata": {},
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-dayton",
+   "id": "unnecessary-vertical",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "joined-joyce",
+   "id": "rolled-community",
    "metadata": {},
    "outputs": [
     {
@@ -363,47 +363,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>593</dd>\n",
+       "\t\t<dd>595</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.588293650793651</dd>\n",
+       "\t\t<dd>0.590277777777778</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>262</dd>\n",
+       "\t\t<dd>363</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>331</dd>\n",
+       "\t\t<dd>232</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 593\n",
-       "\\item[\\$deg\\_prop] 0.588293650793651\n",
-       "\\item[\\$n\\_up] 262\n",
-       "\\item[\\$n\\_down] 331\n",
+       "\\item[\\$n\\_deg] 595\n",
+       "\\item[\\$deg\\_prop] 0.590277777777778\n",
+       "\\item[\\$n\\_up] 363\n",
+       "\\item[\\$n\\_down] 232\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   593\n",
+       ":   595\n",
        "$deg_prop\n",
-       ":   0.588293650793651\n",
+       ":   0.590277777777778\n",
        "$n_up\n",
-       ":   262\n",
+       ":   363\n",
        "$n_down\n",
-       ":   331\n",
+       ":   232\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 593\n",
+       "[1] 595\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.5882937\n",
+       "[1] 0.5902778\n",
        "\n",
        "$n_up\n",
-       "[1] 262\n",
+       "[1] 363\n",
        "\n",
        "$n_down\n",
-       "[1] 331\n"
+       "[1] 232\n"
       ]
      },
      "metadata": {},
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-health",
+   "id": "committed-starter",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-reservation",
+   "id": "close-survivor",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -436,23 +436,23 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "brilliant-guatemala",
+   "id": "entitled-cathedral",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_sig</strong> = 3"
+       "<strong>$n_sig</strong> = 12"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_sig} = 3"
+       "\\textbf{\\$n\\_sig} = 12"
       ],
       "text/markdown": [
-       "**$n_sig** = 3"
+       "**$n_sig** = 12"
       ],
       "text/plain": [
        "$n_sig\n",
-       "[1] 3\n"
+       "[1] 12\n"
       ]
      },
      "metadata": {},
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informal-source",
+   "id": "smooth-nickel",
    "metadata": {},
    "source": [
     "## MI"
@@ -475,23 +475,23 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "built-given",
+   "id": "mighty-disco",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_mi</strong> = 56"
+       "<strong>$n_mi</strong> = 30"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_mi} = 56"
+       "\\textbf{\\$n\\_mi} = 30"
       ],
       "text/markdown": [
-       "**$n_mi** = 56"
+       "**$n_mi** = 30"
       ],
       "text/plain": [
        "$n_mi\n",
-       "[1] 56\n"
+       "[1] 30\n"
       ]
      },
      "metadata": {},
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-kidney",
+   "id": "continuous-exclusive",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cutting-survival",
+   "id": "initial-learning",
    "metadata": {},
    "outputs": [
     {
@@ -522,47 +522,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$dataset</dt>\n",
-       "\t\t<dd>'unified_cervical_data'</dd>\n",
+       "\t\t<dd>'unified_uterine_data'</dd>\n",
        "\t<dt>$naive</dt>\n",
-       "\t\t<dd>0.173076923076923</dd>\n",
+       "\t\t<dd>0.140625</dd>\n",
        "\t<dt>$mc</dt>\n",
-       "\t\t<dd>0.249366341763292</dd>\n",
+       "\t\t<dd>0.246008409683536</dd>\n",
        "\t<dt>$n_obs</dt>\n",
-       "\t\t<dd>255</dd>\n",
+       "\t\t<dd>46</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$dataset] 'unified\\_cervical\\_data'\n",
-       "\\item[\\$naive] 0.173076923076923\n",
-       "\\item[\\$mc] 0.249366341763292\n",
-       "\\item[\\$n\\_obs] 255\n",
+       "\\item[\\$dataset] 'unified\\_uterine\\_data'\n",
+       "\\item[\\$naive] 0.140625\n",
+       "\\item[\\$mc] 0.246008409683536\n",
+       "\\item[\\$n\\_obs] 46\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$dataset\n",
-       ":   'unified_cervical_data'\n",
+       ":   'unified_uterine_data'\n",
        "$naive\n",
-       ":   0.173076923076923\n",
+       ":   0.140625\n",
        "$mc\n",
-       ":   0.249366341763292\n",
+       ":   0.246008409683536\n",
        "$n_obs\n",
-       ":   255\n",
+       ":   46\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$dataset\n",
-       "[1] \"unified_cervical_data\"\n",
+       "[1] \"unified_uterine_data\"\n",
        "\n",
        "$naive\n",
-       "[1] 0.1730769\n",
+       "[1] 0.140625\n",
        "\n",
        "$mc\n",
-       "[1] 0.2493663\n",
+       "[1] 0.2460084\n",
        "\n",
        "$n_obs\n",
-       "[1] 255\n"
+       "[1] 46\n"
       ]
      },
      "metadata": {},
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occasional-minutes",
+   "id": "settled-possession",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "minimal-export",
+   "id": "passing-hughes",
    "metadata": {},
    "outputs": [
     {
@@ -596,47 +596,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$avg_score</dt>\n",
-       "\t\t<dd>0.335966034453971</dd>\n",
+       "\t\t<dd>0.304563492063492</dd>\n",
        "\t<dt>$naive_pct_imp</dt>\n",
-       "\t\t<dd>94.1137087956279</dd>\n",
+       "\t\t<dd>116.57848324515</dd>\n",
        "\t<dt>$mc_pct_imp</dt>\n",
-       "\t\t<dd>34.7278995546575</dd>\n",
+       "\t\t<dd>23.8020653258485</dd>\n",
        "\t<dt>$n_genes</dt>\n",
-       "\t\t<dd>192</dd>\n",
+       "\t\t<dd>28</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$avg\\_score] 0.335966034453971\n",
-       "\\item[\\$naive\\_pct\\_imp] 94.1137087956279\n",
-       "\\item[\\$mc\\_pct\\_imp] 34.7278995546575\n",
-       "\\item[\\$n\\_genes] 192\n",
+       "\\item[\\$avg\\_score] 0.304563492063492\n",
+       "\\item[\\$naive\\_pct\\_imp] 116.57848324515\n",
+       "\\item[\\$mc\\_pct\\_imp] 23.8020653258485\n",
+       "\\item[\\$n\\_genes] 28\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$avg_score\n",
-       ":   0.335966034453971\n",
+       ":   0.304563492063492\n",
        "$naive_pct_imp\n",
-       ":   94.1137087956279\n",
+       ":   116.57848324515\n",
        "$mc_pct_imp\n",
-       ":   34.7278995546575\n",
+       ":   23.8020653258485\n",
        "$n_genes\n",
-       ":   192\n",
+       ":   28\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$avg_score\n",
-       "[1] 0.335966\n",
+       "[1] 0.3045635\n",
        "\n",
        "$naive_pct_imp\n",
-       "[1] 94.11371\n",
+       "[1] 116.5785\n",
        "\n",
        "$mc_pct_imp\n",
-       "[1] 34.7279\n",
+       "[1] 23.80207\n",
        "\n",
        "$n_genes\n",
-       "[1] 192\n"
+       "[1] 28\n"
       ]
      },
      "metadata": {},
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-kitty",
+   "id": "accompanied-necessity",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dated-section",
+   "id": "aquatic-providence",
    "metadata": {},
    "outputs": [
     {
@@ -680,16 +680,43 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "acting-conducting",
+   "id": "ethical-prize",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in wgcna_meta(network_me_sig_df, network_mm_gs_df, q_me_thresh, : could not find function \"wgcna_meta\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in wgcna_meta(network_me_sig_df, network_mm_gs_df, q_me_thresh, : could not find function \"wgcna_meta\"\nTraceback:\n"
-     ]
+     "data": {
+      "text/html": [
+       "<dl>\n",
+       "\t<dt>$n_sig_modules</dt>\n",
+       "\t\t<dd>3</dd>\n",
+       "\t<dt>$n_sig_genes</dt>\n",
+       "\t\t<dd>175</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description}\n",
+       "\\item[\\$n\\_sig\\_modules] 3\n",
+       "\\item[\\$n\\_sig\\_genes] 175\n",
+       "\\end{description}\n"
+      ],
+      "text/markdown": [
+       "$n_sig_modules\n",
+       ":   3\n",
+       "$n_sig_genes\n",
+       ":   175\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "$n_sig_modules\n",
+       "[1] 3\n",
+       "\n",
+       "$n_sig_genes\n",
+       "[1] 175\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -699,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brazilian-apple",
+   "id": "cosmetic-proposal",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -707,8 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "choice-receptor",
+   "execution_count": 15,
+   "id": "worth-straight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,10 +754,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "shaped-parcel",
+   "execution_count": 16,
+   "id": "surface-medline",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "7646"
+      ],
+      "text/latex": [
+       "7646"
+      ],
+      "text/markdown": [
+       "7646"
+      ],
+      "text/plain": [
+       "[1] 7646"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "595"
+      ],
+      "text/latex": [
+       "595"
+      ],
+      "text/markdown": [
+       "595"
+      ],
+      "text/plain": [
+       "[1] 595"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "65"
+      ],
+      "text/latex": [
+       "65"
+      ],
+      "text/markdown": [
+       "65"
+      ],
+      "text/plain": [
+       "[1] 65"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "175"
+      ],
+      "text/latex": [
+       "175"
+      ],
+      "text/markdown": [
+       "175"
+      ],
+      "text/plain": [
+       "[1] 175"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "37"
+      ],
+      "text/latex": [
+       "37"
+      ],
+      "text/markdown": [
+       "37"
+      ],
+      "text/plain": [
+       "[1] 37"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "106"
+      ],
+      "text/latex": [
+       "106"
+      ],
+      "text/markdown": [
+       "106"
+      ],
+      "text/plain": [
+       "[1] 106"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "9"
+      ],
+      "text/latex": [
+       "9"
+      ],
+      "text/markdown": [
+       "9"
+      ],
+      "text/plain": [
+       "[1] 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "length(deg_list)\n",
     "length(demg_list)\n",
@@ -743,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secret-vitamin",
+   "id": "varying-murder",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -751,8 +905,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "apparent-quantum",
+   "execution_count": 17,
+   "id": "laden-distributor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assured-magnitude",
+   "id": "dominant-premiere",
    "metadata": {},
    "outputs": [],
    "source": []
