--- a/enrichment_analysis/combined_ea.ipynb
+++ b/enrichment_analysis/combined_ea.ipynb
@@ -3,25 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -197,19 +192,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -226,7 +216,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  hugo_symbol = \u001b[31mcol_character()\u001b[39m,\n",
       "  entrez_gene_id = \u001b[32mcol_double()\u001b[39m\n",
@@ -244,7 +234,7 @@
     "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
     "nsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
     "umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))\n",
-    "survival_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_demg_list.txt\"))"
+    "# survival_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_demg_list.txt\"))"
    ]
   },
   {
@@ -492,9 +482,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_demg_df <- survival_demg_list %>%\n",
-    "    as_tibble_col(column_name = \"geneID\") %>%\n",
-    "    dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
+    "# survival_demg_df <- survival_demg_list %>%\n",
+    "#     as_tibble_col(column_name = \"geneID\") %>%\n",
+    "#     dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
    ]
   },
   {
@@ -510,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_demg_go <- enrichGO(survival_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
+    "# survival_demg_go <- enrichGO(survival_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
    ]
   },
   {
@@ -519,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_demg_go_df <- make_ea_df(survival_demg_go, ea_type = \"GO\")"
+    "# survival_demg_go_df <- make_ea_df(survival_demg_go, ea_type = \"GO\")"
    ]
   },
   {
@@ -535,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_demg_kegg <- enrichKEGG(survival_demg_df$entrez_gene_id, organism = \"hsa\")"
+    "# survival_demg_kegg <- enrichKEGG(survival_demg_df$entrez_gene_id, organism = \"hsa\")"
    ]
   },
   {
@@ -544,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_demg_kegg_df <- make_ea_df(survival_demg_kegg, ea_type = \"KEGG\")"
+    "# survival_demg_kegg_df <- make_ea_df(survival_demg_kegg, ea_type = \"KEGG\")"
    ]
   },
   {
@@ -556,21 +546,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(\n",
-    "    survival_demg_go_df,\n",
-    "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_go.tsv\")\n",
-    ")\n",
+    "# write_tsv(\n",
+    "#     survival_demg_go_df,\n",
+    "#     paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_go.tsv\")\n",
+    "# )\n",
     "\n",
-    "if (nrow(survival_demg_kegg_df) > 0) {\n",
-    "    write_tsv(\n",
-    "        survival_demg_kegg_df,\n",
-    "        paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_kegg.tsv\")\n",
-    "    )\n",
-    "}\n"
+    "# if (nrow(survival_demg_kegg_df) > 0) {\n",
+    "#     write_tsv(\n",
+    "#         survival_demg_kegg_df,\n",
+    "#         paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_kegg.tsv\")\n",
+    "#     )\n",
+    "# }\n"
    ]
   }
  ],
