Created script version of KM GMM cutoff finder.

--- a/feature_selection_analysis/high_low_thresh_gmm.ipynb
+++ b/feature_selection_analysis/high_low_thresh_gmm.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "hispanic-lincoln",
+   "execution_count": 32,
+   "id": "unusual-expert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "actual-responsibility",
+   "execution_count": 33,
+   "id": "altered-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "empty-technique",
+   "execution_count": 34,
+   "id": "continent-concentrate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "incomplete-school",
+   "execution_count": 35,
+   "id": "surrounded-world",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "liberal-steering",
+   "execution_count": 36,
+   "id": "large-parade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "million-powell",
+   "execution_count": 37,
+   "id": "bridal-walter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "polyphonic-bottle",
+   "id": "dated-visitor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "egyptian-lying",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rand.seed(seed)\n",
-    "# gm = GaussianMixture(n_components=2, random_state=rand, n_init=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
-   "id": "failing-assessment",
+   "id": "electric-encoding",
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +116,7 @@
     }
    ],
    "source": [
+    "rand.seed(seed)\n",
     "for i in range(n_genes):\n",
     "    gene_i = gene_names[i]\n",
     "    gm = GaussianMixture(n_components=2, random_state=rand, n_init=5)\n",
@@ -144,20 +134,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ecological-scene",
+   "id": "august-manufacturer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cutoff_df = pd.DataFrame({\"geneID\": gene_names, \"cutoff\": cutoffs})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "recreational-disney",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cutoff_df = pd.DataFrame({\"geneID\": gene_names, \"cutoff\": cutoffs})\n",
     "cutoff_df.to_csv(f\"{dirs.analysis_dir}/survival/{unified_dsets[dset_idx]}_expression_cutoffs.tsv\", index=False, sep=\"\\t\")"
    ]
   }
