--- a/feature_selection_analysis/univ_survival.ipynb
+++ b/feature_selection_analysis/univ_survival.ipynb
@@ -3,26 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "seventh-lafayette",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "residential-grass",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -78,17 +73,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "following-yugoslavia",
+   "id": "abandoned-mumbai",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3"
+    "dset_idx <- 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "convenient-touch",
+   "id": "presidential-tsunami",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_status = \u001b[31mcol_character()\u001b[39m,\n",
@@ -115,7 +110,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  cutoff = \u001b[32mcol_double()\u001b[39m\n",
@@ -123,7 +118,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -163,14 +158,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "functional-report",
+   "id": "following-accounting",
    "metadata": {},
    "outputs": [],
    "source": [
     "get_high_low <- function(df, col_str, cutoff) {\n",
     "    col = as.name(col_str)\n",
     "    df %>%\n",
-    "        mutate(high = !!col > cutoff, \"high_low\" = ifelse(high == TRUE, \"high\", \"low\")) %>%\n",
+    "        mutate(high = !!col > cutoff, high_low = ifelse(high == TRUE, \"high\", \"low\")) %>%\n",
     "        select(-high)\n",
     "}\n",
     "\n",
@@ -207,18 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "disciplinary-shower",
+   "id": "consecutive-syndicate",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
-      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gene_names <- colnames(filtered_joined_df)[-(1:3)]\n",
     "km_df <- test_all_genes_km(filtered_joined_df, cutoff_df, gene_names)\n",
@@ -230,50 +216,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cleared-series",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# joined_surv_df %>%\n",
-    "# #     filter(cph_pval < 0.1)\n",
-    "# #     filter(km_pval < 0.05 | cph_pval < 0.05) %>%\n",
-    "#     filter(km_qval < 0.15 | cph_qval < 0.15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "korean-kingdom",
+   "id": "equivalent-grove",
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv(joined_surv_df, paste0(dirs$analysis_dir, \"/survival/\", unified_dsets[dset_idx], \"_univ_survival_results.tsv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "hourly-walter",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# g = \"COL6A5\"\n",
-    "# simp_survival_df <- filtered_joined_df %>%\n",
-    "#     select(sample_name, vital_status, survival_time, !!as.name(g))\n",
-    "# center <- cutoff_df %>%\n",
-    "#     filter(geneID == g) %>%\n",
-    "#     pull(cutoff)\n",
-    "# simp_survival_df <- get_high_low(simp_survival_df, g, center)\n",
-    "\n",
-    "# km_fit <- survfit(Surv(survival_time, vital_status) ~ high_low, type = \"kaplan-meier\", data = simp_survival_df)\n",
-    "# km_diff <- survdiff(Surv(survival_time, vital_status) ~ high_low, data = simp_survival_df)\n",
-    "# km_diff\n",
-    "# ggplot(data = simp_survival_df) +\n",
-    "#     geom_histogram(aes_string(x = g), binwidth = 0.2, fill = \"steelblue\") +\n",
-    "#     geom_vline(xintercept = center, color = \"firebrick\", linetype = 2) +\n",
-    "#     theme_bw()\n",
-    "\n",
-    "# ggsurvplot(survfit(Surv(survival_time, vital_status) ~ high_low, data = simp_survival_df), data = simp_survival_df)"
    ]
   }
  ],
