--- a/figures/survival_vis.ipynb
+++ b/figures/survival_vis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "trained-supervisor",
+   "id": "violent-parade",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "experienced-compromise",
+   "id": "competent-philip",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "legal-flavor",
+   "id": "respected-minimum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "foreign-crystal",
+   "id": "fixed-lighter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "large-requirement",
+   "id": "imported-lounge",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "portable-upset",
+   "id": "numerous-mozambique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "detailed-boston",
+   "id": "stunning-galaxy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "understanding-bosnia",
+   "id": "simple-practice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "finite-prerequisite",
+   "execution_count": 10,
+   "id": "regulation-presence",
    "metadata": {},
    "outputs": [
     {
@@ -234,18 +234,18 @@
     "        text = element_text(size = text_size, family = family),\n",
     "        axis.text.x = element_text(size = text_size, angle = 55, vjust = 0.55, hjust = 0.55)\n",
     "    ) +\n",
-    "    guides(fill = guide_legend(override.aes = list(color = \"black\", size = 0.5)))\n",
-    "\n",
-    "# ggsave(paste0(dirs$figures_dir, \"/survival/prognostic_genes.png\"), last_plot(), width = wd, dpi = dpi)"
+    "    guides(fill = guide_legend(override.aes = list(color = \"black\", size = 0.5)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electric-illinois",
+   "id": "white-conversation",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ggsave(paste0(dirs$figures_dir, \"/survival/prognostic_genes.png\"), last_plot(), width = wd, dpi = dpi)"
+   ]
   }
  ],
  "metadata": {
